--- a/EdiListFX/src/de/vbl/ediliste/view/EdiEintrag.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiEintrag.fxml
@@ -29,7 +29,7 @@
 										<ColumnConstraints hgrow="NEVER" maxWidth="246.0" minWidth="160.0" prefWidth="180.0" />
 									</columnConstraints>
 									<rowConstraints>
-<RowConstraints minHeight="0.0" prefHeight="10.0" vgrow="SOMETIMES" />
+<RowConstraints minHeight="0.0" prefHeight="5.0" vgrow="SOMETIMES" />
 										<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
 										<RowConstraints maxHeight="1.7976931348623157E308" minHeight="60.0" vgrow="SOMETIMES" />
 										<RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -123,8 +123,8 @@
                                                       <ComboBox fx:id="cmbIntervall" editable="true" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                                       <DatePicker fx:id="dpProduktivSeit" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                                                       <DatePicker fx:id="dpProduktivBis" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-                                                      <Label alignment="CENTER_RIGHT" layoutX="15.0" layoutY="52.0" maxWidth="1.7976931348623157E308" text="Name:" />
-                                                      <TextField fx:id="tfBezeichnung" editable="false" focusTraversable="false" layoutX="864.0" layoutY="13.0" maxWidth="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" />
+                                                      <Label alignment="CENTER_RIGHT" layoutX="15.0" layoutY="52.0" maxWidth="1.7976931348623157E308" text="Bezeichnung (EDI-Nr):" />
+                                                      <TextField fx:id="tfBezeichnung" focusTraversable="false" layoutX="864.0" layoutY="13.0" maxWidth="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" />
                               											</children>
                               											<padding>
                               												<Insets left="5.0" right="8.0" />
