--- a/EdiListFX/src/de/vbl/ediliste/view/EdiMain.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiMain.fxml
@@ -65,7 +65,7 @@
 																<TableColumn fx:id="tColAuswahlEdiNr" editable="false" maxWidth="120.0" minWidth="0.0" prefWidth="35.0" text="Nr." />
 																<TableColumn fx:id="tColAuswahlEdiNrIngration" prefWidth="127.0" text="Integration" />
 																<TableColumn fx:id="tColAuswahlEdiNrSender" prefWidth="85.0" text="Sender" />
-																<TableColumn fx:id="tColAuswahlEdiNrBezeichnung" editable="false" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="-1.0" text="Name des EDI-Eintrages" />
+																<TableColumn fx:id="tColAuswahlEdiNrBezeichnung" editable="false" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="-1.0" text="Bezeichnung (EDI-Nr.)" />
 															</columns>
 														</TableView>
 													</children>
