--- a/EdiListFX/src/de/vbl/ediliste/view/EdiEintrag.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiEintrag.fxml
@@ -44,7 +44,7 @@
 										<ComboBox fx:id="cmbKonfiguration" layoutX="9.600000381469727" layoutY="85.60000038146973" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 										<Label alignment="CENTER_RIGHT" layoutX="9.600000381469727" layoutY="34.60000038146973" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Name:" AnchorPane.leftAnchor="14.0" GridPane.rowIndex="1">
 										</Label>
-										<TableView editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="120.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2">
+										<TableView editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onContextMenuRequested="#actionDocumentContextMenuRequested" prefHeight="120.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2">
 											<columns>
 												<TableColumn maxWidth="80.0" text="Vorhaben" />
 												<TableColumn maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="500.0" text="Bezeichnung des Dokuments" />
