--- a/EdiListFX/src/de/vbl/ediliste/view/KontaktPerson.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/KontaktPerson.fxml
@@ -75,7 +75,7 @@
 </AnchorPane>
 <AnchorPane minHeight="0.0" minWidth="0.0">
 <children>
-                  <TitledPane animated="false" maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefWidth="933.0" text="Diese Kontakt-Person eingetragen bei folgenden Komponenten:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TitledPane animated="false" maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefWidth="933.0" text="Diese Kontakt-Person ist eingetragen bei folgenden Komponenten/Systemen/Partner:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <content>
                               <TableView fx:id="tvKomponenten" minHeight="0.0" minWidth="0.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                                  <columns>
