Wechsel von EDI-Nr zu Schnittstelle begonnen

--- a/EdiListFX/src/de/vbl/im/controller/subs/KomponentenAuswahl.fxml
+++ b/EdiListFX/src/de/vbl/im/controller/subs/KomponentenAuswahl.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.im.controller.KomponentenAuswahlController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.im.controller.subs.KomponentenAuswahlController">
 	<top>
 		<Label fx:id="lbFehlertext" textAlignment="CENTER" textFill="#ff0808" BorderPane.alignment="CENTER">
 			<font>
