--- a/EdiListFX/src/de/vbl/im/view/IntegrationManager.fxml
+++ b/EdiListFX/src/de/vbl/im/view/IntegrationManager.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="795.0" prefWidth="1409.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.im.controller.EdiMainController">
+<BorderPane prefHeight="795.0" prefWidth="1409.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.vbl.im.controller.IntegrationManagerController">
 	<top>
 		<VBox>
 			<children>
@@ -36,15 +36,18 @@
 							</items>
 						</Menu>
 					</menus>
-				</MenuBar>
-				<TextField fx:id="txtInfoZeile" alignment="CENTER" disable="true" editable="false" />
+				</MenuBar><ToolBar prefWidth="200.0">
+  <items>
+    <Button disable="true" mnemonicParsing="false" text="Button" visible="false" />
+  </items>
+</ToolBar>
 			</children>
 		</VBox>
 	</top>
 	<center>
 		<TabPane fx:id="tabPaneObjekte" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
 			<tabs>
-				<Tab fx:id="tabEdiNr" text="EDI-Nr.">
+				<Tab fx:id="tabEdiNr" closable="false" text="Schnittstellen">
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0">
 							<children>
@@ -54,18 +57,13 @@
 											<children>
 												<VBox prefHeight="739.0" prefWidth="1407.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 													<children>
-														<ToolBar layoutX="-48.0" layoutY="14.0" prefWidth="200.0">
-															<items>
-																<Button fx:id="btnNewEdiNr" mnemonicParsing="false" onAction="#newEdiNr" text="Neu" />
-																<Button fx:id="btnDeleteEdiEintrag" disable="true" mnemonicParsing="false" onAction="#handleEdiEintragLoeschen" text="Löschen" />
-															</items>
-														</ToolBar>
+														<ToolBar layoutX="-48.0" layoutY="14.0" visible="false" />
 														<TableView fx:id="tableEdiNrAuswahl" onContextMenuRequested="#actionEdiNrContextMenuRequested" prefHeight="702.0" prefWidth="535.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
 															<columns>
 																<TableColumn fx:id="tColAuswahlEdiNr" editable="false" maxWidth="120.0" minWidth="0.0" prefWidth="35.0" text="Nr." />
 																<TableColumn fx:id="tColAuswahlEdiNrIngration" prefWidth="127.0" text="Integration" />
 																<TableColumn fx:id="tColAuswahlEdiNrSender" prefWidth="85.0" text="Sender" />
-																<TableColumn fx:id="tColAuswahlEdiNrBezeichnung" editable="false" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="-1.0" text="Bezeichnung (EDI-Nr.)" />
+																<TableColumn fx:id="tColAuswahlEdiNrBezeichnung" editable="false" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="-1.0" text="Schnittstellenbezeichnung" />
 															</columns>
 														</TableView>
 													</children>
@@ -79,55 +77,51 @@
 						</AnchorPane>
 					</content>
 				</Tab>
-				<Tab fx:id="tabPartner" text="Partner">
+				<Tab fx:id="tabIntegrationen" closable="false" text="Integrationen">
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-							<children>
-								<SplitPane dividerPositions="0.24" prefHeight="716.0" prefWidth="1409.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-									<items>
-										<AnchorPane>
-											<children>
-												<TableView fx:id="tablePartnerAuswahl" editable="true" maxWidth="1.7976931348623157E308" prefHeight="471.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-													<columns>
-														<TableColumn fx:id="tColAuswahlPartnerName" prefWidth="116.0" text="Partner" />
-														<TableColumn fx:id="tColAuswahlPartnerSysteme" editable="false" prefWidth="65.0" text="Systeme" />
-														<TableColumn fx:id="tColAuswahlPartnerKomponenten" editable="false" prefWidth="91.0" text="Komponenten" />
-													</columns>
-												</TableView>
-											</children>
-										</AnchorPane>
-										<fx:include fx:id="ediPartner" disable="true" source="EdiPartner.fxml" />
-									</items>
-								</SplitPane>
-							</children>
-						</AnchorPane>
+                     <children>
+                        <SplitPane dividerPositions="0.3070362473347548" prefHeight="716.0" prefWidth="1409.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <items>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                 <children>
+                                    <TableView fx:id="tableIntegrationAuswahl" prefHeight="714.0" prefWidth="416.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                      <columns>
+                                        <TableColumn fx:id="tColSelIntegrationName" prefWidth="426.0" text="Integrations-Name" />
+                                        <TableColumn fx:id="tColSelIntegrationKonfigurationAnzahl" prefWidth="147.0" text="Anzahl Konfigurationen" visible="false" />
+                                      </columns>
+                                    </TableView>
+                                 </children>
+                              </AnchorPane>
+                            <fx:include fx:id="integration" disable="true" source="Integration.fxml" />
+                          </items>
+                        </SplitPane>
+                     </children></AnchorPane>
 					</content>
 				</Tab>
-				<Tab fx:id="tabSysteme" text="Systeme">
+				<Tab fx:id="tabKonfigurationen" closable="false" text="Konfigurationen">
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-							<children>
-								<SplitPane dividerPositions="0.3" layoutX="7.0" prefHeight="716.0" prefWidth="1409.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-									<items>
-										<AnchorPane>
-											<children>
-												<TableView fx:id="tableSystemAuswahl" editable="true" prefHeight="471.0" prefWidth="306.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-													<columns>
-														<TableColumn fx:id="tColSelSystemSystemName" prefWidth="159.0" text="System" />
-														<TableColumn fx:id="tColSelSystemPartnerName" editable="false" prefWidth="153.0" text="Partner" />
-														<TableColumn fx:id="tColSelSystemKomponenten" editable="false" prefWidth="106.0" text="Komponenten" />
-													</columns>
-												</TableView>
-											</children>
-										</AnchorPane>
-										<fx:include fx:id="ediSystem" disable="true" source="EdiSystem.fxml" />
-									</items>
-								</SplitPane>
-							</children>
-						</AnchorPane>
+                     <children>
+                        <SplitPane dividerPositions="0.3724235963041933" prefHeight="716.0" prefWidth="1409.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <items>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                 <children>
+                                    <TableView fx:id="tableKonfigurationAuswahl" prefHeight="714.0" prefWidth="416.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                      <columns>
+                                        <TableColumn fx:id="tColSelKonfigurationName" prefWidth="314.0" text="Konfigurations-Name" />
+                                        <TableColumn fx:id="tColSelKonfigIntegrationName" prefWidth="259.0" text="gehört zu Integration" />
+                                      </columns>
+                                    </TableView>
+                                 </children>
+                              </AnchorPane>
+                            <fx:include fx:id="konfiguration" disable="true" source="Konfiguration.fxml" />
+                          </items>
+                        </SplitPane>
+                     </children></AnchorPane>
 					</content>
 				</Tab>
-				<Tab fx:id="tabKomponenten" text="Komponenten">
+				<Tab fx:id="tabKomponenten" closable="false" text="Komponenten">
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 							<children>
@@ -151,51 +145,55 @@
 						</AnchorPane>
 					</content>
 				</Tab>
-				<Tab fx:id="tabIntegrationen" text="Integrationen">
+				<Tab fx:id="tabSysteme" closable="false" text="Systeme">
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <SplitPane dividerPositions="0.3070362473347548" prefHeight="716.0" prefWidth="1409.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <items>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                 <children>
-                                    <TableView fx:id="tableIntegrationAuswahl" prefHeight="714.0" prefWidth="416.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                      <columns>
-                                        <TableColumn fx:id="tColSelIntegrationName" prefWidth="426.0" text="Integrations-Name" />
-                                        <TableColumn fx:id="tColSelIntegrationKonfigurationAnzahl" prefWidth="147.0" text="Anzahl Konfigurationen" visible="false" />
-                                      </columns>
-                                    </TableView>
-                                 </children>
-                              </AnchorPane>
-                            <fx:include fx:id="integration" disable="true" source="Integration.fxml" />
-                          </items>
-                        </SplitPane>
-                     </children></AnchorPane>
+							<children>
+								<SplitPane dividerPositions="0.3" layoutX="7.0" prefHeight="716.0" prefWidth="1409.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+									<items>
+										<AnchorPane>
+											<children>
+												<TableView fx:id="tableSystemAuswahl" editable="true" prefHeight="471.0" prefWidth="306.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+													<columns>
+														<TableColumn fx:id="tColSelSystemSystemName" prefWidth="159.0" text="System" />
+														<TableColumn fx:id="tColSelSystemPartnerName" editable="false" prefWidth="153.0" text="Partner" />
+														<TableColumn fx:id="tColSelSystemKomponenten" editable="false" prefWidth="106.0" text="Komponenten" />
+													</columns>
+												</TableView>
+											</children>
+										</AnchorPane>
+										<fx:include fx:id="ediSystem" disable="true" source="EdiSystem.fxml" />
+									</items>
+								</SplitPane>
+							</children>
+						</AnchorPane>
 					</content>
 				</Tab>
-				<Tab fx:id="tabKonfigurationen" text="Konfigurationen">
+				<Tab fx:id="tabPartner" closable="false" text="Partner">
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <SplitPane dividerPositions="0.3724235963041933" prefHeight="716.0" prefWidth="1409.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <items>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                 <children>
-                                    <TableView fx:id="tableKonfigurationAuswahl" prefHeight="714.0" prefWidth="416.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                      <columns>
-                                        <TableColumn fx:id="tColSelKonfigurationName" prefWidth="314.0" text="Konfigurations-Name" />
-                                        <TableColumn fx:id="tColSelKonfigIntegrationName" prefWidth="259.0" text="gehört zu Integration" />
-                                      </columns>
-                                    </TableView>
-                                 </children>
-                              </AnchorPane>
-                            <fx:include fx:id="konfiguration" disable="true" source="Konfiguration.fxml" />
-                          </items>
-                        </SplitPane>
-                     </children></AnchorPane>
+							<children>
+								<SplitPane dividerPositions="0.24" prefHeight="716.0" prefWidth="1409.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+									<items>
+										<AnchorPane>
+											<children>
+												<TableView fx:id="tablePartnerAuswahl" editable="true" maxWidth="1.7976931348623157E308" prefHeight="471.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+													<columns>
+														<TableColumn fx:id="tColAuswahlPartnerName" prefWidth="116.0" text="Partner" />
+														<TableColumn fx:id="tColAuswahlPartnerSysteme" editable="false" prefWidth="65.0" text="Systeme" />
+														<TableColumn fx:id="tColAuswahlPartnerKomponenten" editable="false" prefWidth="91.0" text="Komponenten" />
+													</columns>
+												</TableView>
+											</children>
+										</AnchorPane>
+										<fx:include fx:id="ediPartner" disable="true" source="EdiPartner.fxml" />
+									</items>
+								</SplitPane>
+							</children>
+						</AnchorPane>
 					</content>
 				</Tab>
-				<Tab fx:id="tabKontaktPersonen" text="Kontakt-Personen">
+				<Tab fx:id="tabKontaktPersonen" closable="false" text="Kontakt-Personen">
 				  <content>
     				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 					<children>
@@ -218,7 +216,7 @@
 					</AnchorPane>
 				  </content>
 				</Tab>
-				<Tab fx:id="tabGeschaeftsobjekte" text="Geschäftsobjekte">
+				<Tab fx:id="tabGeschaeftsobjekte" closable="false" text="Geschäftsobjekte">
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -245,4 +243,7 @@
 			</tabs>
 		</TabPane>
 	</center>
+<bottom>
+				<TextField fx:id="txtInfoZeile" editable="false" BorderPane.alignment="CENTER" />
+</bottom>
 </BorderPane>
